--- a/outer-planets.html
+++ b/outer-planets.html
@@ -103,7 +103,7 @@
 
 				<div class="leftCol mt0" style="border-right: 0;">
 					<figure class="fr ml mt">
-						<img src="images/Jupiter.png" alt="Planet Jupiter">
+						<img src="images/jupiter.png" alt="Planet Jupiter">
 						<figcaption>
 							Jupiter from the HST <small>(credit: NASA)</small>
 						</figcaption>
