--- a/solar.html
+++ b/solar.html
@@ -250,15 +250,7 @@
 						<td>1982</td>
 						<td rowspan="2">Observations of solar wind, magnetic and electric fields, cosmic rays and cosmic dust between Earth and Sun.</td>
 						<td rowspan="2">A pair of probes launched into heliocentric orbit for the purpose of studying solar processes. A joint venture of West Germany's space agency DFVLR and U.S. NASA.
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="http://www2.mps.mpg.de/en/projekte/helios/index.html" target="_blank" title="Max Planck Institute">Max Planck Institute</a></li>
-										<li><a class="elink" href="https://www.honeysucklecreek.net/dss44/helios.html" target="_blank" title="Honeysuckle Creek">Honeysuckle Creek</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="http://www2.mps.mpg.de/en/projekte/helios/index.html" target="_blank" title="External link">Max Planck Institute,</a>&nbsp;&nbsp;<a class="elink" href="https://www.honeysucklecreek.net/dss44/helios.html" target="_blank" title="External link">Honeysuckle Creek</a>
 							</div>
 						</td>
 					</tr>
@@ -279,14 +271,7 @@
 						<td>1982</td>
 						<td>Observed solar phenomena in conjunction with earth-orbiting ISEE-1 and ISEE-2; later renamed International Cometary Explorer (ICE) and directed to Comet Giacobini-Zinner.</td>
 						<td>The Explorer-class heliocentric spacecraft, ISEE 3 (International Sun-Earth Explorer 3), was part of the mother / daughter / heliocentric mission (ISEE 1, ISEE 2, and ISEE 3).
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="http://spacecollege.org/isee3/" target="_blank" title="Space College">Space College</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="http://spacecollege.org/isee3/" target="_blank" title="External link">Space College</a>
 							</div>
 						</td>
 					</tr>
@@ -301,14 +286,7 @@
 						<td>2008</td>
 						<td>Solar south and north polar observations to investigate the solar wind, interplanetary magnetic field, cosmic rays, neutral interstellar gas and energetic particles.</td>
 						<td>Formerly the International Solar Polar Mission (ISPM).
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="http://www.esa.int/Science_Exploration/Space_Science/Ulysses_overview" target="_blank" title="ESA">ESA</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="http://www.esa.int/Science_Exploration/Space_Science/Ulysses_overview" target="_blank" title="External link">ESA</a>
 							</div>
 						</td>
 					</tr>
@@ -322,14 +300,7 @@
 						<td>-</td>
 						<td>Solar wind measurements.</td>
 						<td>Global Geospace Science (GGS) Wind satellite, a NASA science spacecraft.
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="https://wind.nasa.gov/" target="_blank" title="NASA">NASA</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="https://wind.nasa.gov/" target="_blank" title="External link">NASA</a>
 							</div>
 						</td>
 					</tr>
@@ -343,14 +314,7 @@
 						<td>-</td>
 						<td>Investigation of Sun's core, corona, and solar wind; comet discoveries.</td>
 						<td>The Solar and Heliospheric Observatory (SOHO) was built by a European consortium. Originally planned as a two-year mission, it continues to operate after over 20 years.
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="https://sohowww.nascom.nasa.gov/" target="_blank" title="ESA / NASA">ESA / NASA</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="https://sohowww.nascom.nasa.gov/" target="_blank" title="External link">ESA / NASA</a>
 							</div>
 						</td>
 					</tr>
@@ -364,14 +328,7 @@
 						<td>-</td>
 						<td>Studies matter comprising energetic particles from the solar wind, the interplanetary medium, and other sources.</td>
 						<td>Advanced Composition Explorer (ACE), a NASA Explorers program Solar and space exploration spacecraft, remains in operation.
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="http://www.srl.caltech.edu/ACE/" target="_blank" title="Caltech">Caltech</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="http://www.srl.caltech.edu/ACE/" target="_blank" title="External link">Caltech</a>
 							</div>
 						</td>
 					</tr>
@@ -385,15 +342,7 @@
 						<td>2004</td>
 						<td>Part of NASA's Discovery program, it flew to the Earth-Sun L1 point and spent two years collecting samples of the solar wind.</td>
 						<td>It crash landed on return to Earth but useful data was salvaged.
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="https://genesismission.jpl.nasa.gov/" target="_blank" title="Genesis - JPL">Genesis - JPL</a></li>
-										<li><a class="elink" href="https://space.skyrocket.de/doc_sdat/genesis.htm" target="_blank" title="Genesis (Discovery 5)">Genesis (Discovery 5)</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="https://genesismission.jpl.nasa.gov/" target="_blank" title="External link">Genesis - JPL,</a>&nbsp;&nbsp;<a class="elink" href="https://space.skyrocket.de/doc_sdat/genesis.htm" target="_blank" title="External link">Genesis (Discovery 5)</a>
 							</div>
 						</td>
 					</tr>
@@ -407,15 +356,7 @@
 						<td rowspan="2">2016</td>
 						<td rowspan="2">Stereoscopic imaging of coronal mass ejections and other solar phenomena.</td>
 						<td rowspan="2" id="parker">STEREO (Solar TErrestrial RElations Observatory) is the third mission in NASA's Solar Terrestrial Probes program. This two-year mission will employ two nearly identical space-based observatories.
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="https://stereo.gsfc.nasa.gov/" target="_blank" title="Goddard Space Flight Center">Goddard Space Flight Center</a></li>
-										<li><a class="elink" href="https://stereo.jhuapl.edu/" target="_blank" title="Johns Hopkins APL">Johns Hopkins APL</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="https://stereo.gsfc.nasa.gov/" target="_blank" title="External link">Goddard Space Flight Center,</a>&nbsp;&nbsp;<a class="elink" href="https://stereo.jhuapl.edu/" target="_blank" title="External link">Johns Hopkins APL</a>
 							</div>
 						</td>
 					</tr>
@@ -434,14 +375,7 @@
 						<td>-</td>
 						<td>Solar wind and coronal mass ejection monitoring, as well as Earth climate monitoring.</td>
 						<td id="soio">Deep Space Climate Observatory (DSCOVR; formerly known as Triana) is a NOAA satellite.
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="https://www.nesdis.noaa.gov/content/dscovr-deep-space-climate-observatory" target="_blank" title="NOAA">NOAA</a></li>
-									</ul>
-								</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="https://www.nesdis.noaa.gov/content/dscovr-deep-space-climate-observatory" target="_blank" title="External link">NOAA</a>
 							</div>
 						</td>
 					</tr>
@@ -455,15 +389,8 @@
 						<td>-</td>
 						<td>Close-range solar coronal study.</td>
 						<td>Parker Solar Probe (previously Solar Probe, Solar Probe Plus, or Solar Probe+) is a NASA robotic spacecraft.
-							<div class="refSymbol">
-								<img src="../images/symbol-ref.png" alt="Reference Symbol">
-								<div class="refList-td">
-									<ul class="blank">
-										<li class="menu-heading">Specific References</li>
-										<li><a class="elink" href="http://parkersolarprobe.jhuapl.edu/" target="_blank" title="Johns Hopkins APL">Johns Hopkins APL</a></li>
-									</ul>
-								</div>
-							</div>
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="http://parkersolarprobe.jhuapl.edu/" target="_blank" title="External link">Johns Hopkins APL</a>
+							</div>	
 						</td>
 					</tr>
 
@@ -475,7 +402,24 @@
 						<td>2020</td>
 						<td>-</td>
 						<td>Intended to perform detailed measurements of the inner heliosphere and nascent solar wind, and perform close observations of the polar regions of the Sun.</td>
-						<td>NASA is a joint operator and contributor.	</td>
+						<td>ESA program with NASA as a joint operator and contributor.
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="https://www.esa.int/Science_Exploration/Space_Science/Solar_Orbiter" target="_blank" title="External link">ESA - Solar Orbiter</a>
+							</div>
+						</td>
+					</tr>
+
+					<tr>
+						<td class="color">19</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Aditya-L1" target="_blank" title="External Link - Wikipedia - Aditya-L1">Aditya-L1</a></td>
+						<td>PSLV C57</td>
+						<td>India</td>
+						<td>2023</td>
+						<td>-</td>
+						<td>Named from Sanskrit: Aditya, "Sun" and L1, "Lagrange point 1" the spacecraft is studying the solar atmosphere, solar magnetic storms, and their impact on the environment around the Earth.</td>
+						<td>Designed and developed by the Indian Space Research Organisation (ISRO) and other Indian Research Institutes.
+							<div class="flexRow"><img src="images/symbol-ref.png" alt="Reference Symbol"><a class="elink" href="https://www.isro.gov.in/Aditya_L1.html" target="_blank" title="External link">ISRO - Aditya-L1</a>
+							</div>
+						</td>
 					</tr>
 
 				</table>
@@ -610,6 +554,14 @@
 						</div>
 						<p class="center color-small">Solar Orbiter / Atlas V</p>
 					</div>
+
+					<div>
+						<div class="thumb-background">
+							<h3>&nbsp;19&nbsp;</h3>
+							<a href="images-gallery/aditya-pslv-c57.jpg" data-lightbox="eos" title="Aditya-L1 spacecraft drawing / PSLV-C57 rollout (credit: ISRO)"><img class="thumb" src="images-gallery/aditya-pslv-c57.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">Aditya-L1 / PSLV-C57</p>
+					</div>
 				</div>
 			</div>	
 		</section>
@@ -618,7 +570,7 @@
 		
 		<span id="ref"></span>
 
-		<section style="width: 30%;">
+		<section style="width: 40%;">
 
 			<div class="barH1"><h1>General References</h1>
 			</div>
@@ -637,6 +589,12 @@
 						<li><a class="elink" href="https://www.nasa.gov/missions" target="_blank" title="NASA - Missions">Missions</a></li>
 						<li><a class="elink" href="https://nssdc.gsfc.nasa.gov/nmc/SpacecraftQuery.jsp" target="_blank" title="NASA">NSSDCA</a></li>
 				</ul>
+
+				<ul class="blank">
+					<li>ISRO:</li>
+						<li><a class="elink" href="https://www.isro.gov.in/" target="_blank" title="ISRO">Indian Space<br>
+							Research Organisation</a></li>
+				</ul>
 				
 				<ul class="blank mb">
 						<li>Misc:</li>
@@ -651,7 +609,7 @@
 		<!-- Footer Banner -->
 
 		<div class="footBanner flexRow-sa">
-			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2022-08</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
+			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2024-02</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
 		</div>
 
 		<!-- End -->
