--- a/outer-planets.html
+++ b/outer-planets.html
@@ -432,6 +432,18 @@
 						<td>Orbiter to measure Jupiter's composition, gravity field, magnetic field, and polar magnetosphere. It will also attempt to measure if it has a rocky core, the amount of water present, mass distribution, and its strong winds.</td>
 					</tr>
 
+					<tr>
+						<td class="color">&nbsp;8</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Jupiter_Icy_Moons_Explorer" target="_blank" title="External Link - Wikipedia - JUICE">JUICE</a></td>
+						<td>Ariane 5 ECA</td>
+						<td>ESA</td>
+						<td>2023</td>
+						<td>-</td>
+						<td>Jupiter's<br>
+						moons</td>
+						<td>Study three of Jupiter's Galilean moons; Ganymede, Callisto, and Europa. These may have significant bodies of liquid water beneath their icy surfaces which would make them potentially habitable environments.</td>
+					</tr>
+
 				</table>
 			</div>
 
@@ -490,6 +502,14 @@
 						</div>
 						<p class="center color-small">Juno / Atlas V</p>
 					</div>
+
+					<div>
+						<div class="thumb-background">
+							<h3>&nbsp;8&nbsp;</h3>
+							<a href="images-gallery/juice-ariane-5.jpg" data-lightbox="eos" title="JUICE spacecraft drawing / Ariane-5 rocket on pad (credit: ESA)"><img class="thumb" src="images-gallery/juice-ariane-5.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">Juice / Ariane 5</p>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -535,7 +555,7 @@
 		<!-- Footer Banner -->
 
 		<div class="footBanner flexRow-sa">
-			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2022-08</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
+			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2024-02</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
 		</div>
 
 		<!-- End -->
