--- a/luna.html
+++ b/luna.html
@@ -199,7 +199,7 @@
 
 				<table class="shadow-gold" style="width: 100%;">
 
-					<tr>
+					<tr class="trColor">
 						<td width="3%" class="color">&nbsp;1</td>
 						<td width="9.5%"><a class="elink" href="https://en.wikipedia.org/wiki/Pioneer_4" target="_blank" title="External Link - Wikipedia - Pioneer 4">Pioneer 4</a></td>
 						<td width="8.5%">Juno II</td>
@@ -221,7 +221,7 @@
 						<td>Successful impact on 14 September 1959. First spacecraft to reach lunar surface.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">&nbsp;3</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Luna_3" target="_blank" title="External Link - Wikipedia - Luna 3">Luna 3</a></td>
 						<td>Luna 8K72</td>
@@ -243,7 +243,7 @@
 						<td>Impacted on 2 February 1964. Failed to return images due to power system failure.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">&nbsp;5</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Ranger_7" target="_blank" title="External Link - Wikipedia - Ranger 7">Ranger 7</a></td>
 						<td>Atlas-Agena</td>
@@ -265,7 +265,7 @@
 						<td>Impacted on 20 February 1965. Transmitted photographs of the lunar surface during the final minutes to impact.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">&nbsp;7</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Ranger_9" target="_blank" title="External Link - Wikipedia - Ranger 9">Ranger 9</a></td>
 						<td>Atlas-Agena</td>
@@ -287,7 +287,7 @@
 						<td>Flew past the Moon on 20 July 1965 and conducted technology demonstration for future planetary missions.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">&nbsp;9</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Luna_9" target="_blank" title="External Link - Wikipedia - Luna 9">Luna 9</a></td>
 						<td>Molniya-M</td>
@@ -309,7 +309,7 @@
 						<td>Entered orbit on 3 April 1966 and continued to return data until 30 May. First spacecraft to orbit the Moon.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">11</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Surveyor_1" target="_blank" title="External Link - Wikipedia - Surveyor 1">Surveyor 1</a></td>
 						<td>Atlas-Centaur</td>
@@ -331,7 +331,7 @@
 						<td>Orbital insertion on 14 August. De-orbited early due to lack of fuel, impacted the Moon on 29 October 1966.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">13</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Luna_11" target="_blank" title="External Link - Wikipedia - Luna 11">Luna 11</a></td>
 						<td>Molniya-M</td>
@@ -353,7 +353,7 @@
 						<td>Entered orbit on 25 October and returned data until 19 January 1967. Completed photography intended for Luna 11.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">15</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Lunar_Orbiter_2" target="_blank" title="External Link - Wikipedia - Lunar Orbiter 2">Lunar Orbiter 2</a></td>
 						<td>Atlas-Agena</td>
@@ -375,7 +375,7 @@
 						<td>Landed on 24 December. Returned images from the surface and studied the lunar soil. Operated until 28 December.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">17</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Lunar_Orbiter_3" target="_blank" title="External Link - Wikipedia - Lunar Orbiter 3">Lunar Orbiter 3</a></td>
 						<td>Atlas-Agena</td>
@@ -397,7 +397,7 @@
 						<td>Landed on 20 April 1967 and Returned data until 3 May. Visited by Apollo 12 astronauts in 1969.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">19</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Lunar_Orbiter_4" target="_blank" title="External Link - Wikipedia - Lunar Orbiter 4">Lunar Orbiter 4</a></td>
 						<td>Atlas-Agena</td>
@@ -419,7 +419,7 @@
 						<td>Magnetospheric probe, studying the Moon and space. Deactivated in 1973 and presumed to have impacted the Moon.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">21</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Lunar_Orbiter_5" target="_blank" title="External Link - Wikipedia - Lunar Orbiter 5">Lunar Orbiter 5</a></td>
 						<td>Atlas-Agena</td>
@@ -441,7 +441,7 @@
 						<td>Landed in Mare Tranquillitatis on 11 September. Returned data until 17 December.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">23</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Surveyor_6" target="_blank" title="External Link - Wikipedia - Surveyor 6">Surveyor 6</a></td>
 						<td>Atlas-Centaur</td>
@@ -463,7 +463,7 @@
 						<td>Landed 29 kilometres from Tycho crater on 10 January. Returned data until 21 February.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">25</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Luna_14" target="_blank" title="External Link - Wikipedia - Luna 14">Luna 14</a></td>
 						<td>Molniya-M</td>
@@ -485,7 +485,7 @@
 						<td>First Lunar spacecraft recovered successfully after returning to Earth. First life (tortoises) to travel around the Moon.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">27</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Zond_6" target="_blank" title="External Link - Wikipedia - Zond 6">Zond 6</a></td>
 						<td>Proton-K/D</td>
@@ -507,7 +507,7 @@
 						<td>First crewed mission to the Moon. Completed ten orbits of the Moon, returned to Earth on 27 December.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">29</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Apollo_10" target="_blank" title="External Link - Wikipedia - Apollo 10">Apollo 10</a></td>
 						<td>Saturn V</td>
@@ -529,7 +529,7 @@
 						<td>Lunar Module Eagle landed on 20 July 1969. First crewed landing on the Moon.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">31</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Zond_7" target="_blank" title="External Link - Wikipedia - Zond 7">Zond 7</a></td>
 						<td>Proton-K/D</td>
@@ -551,7 +551,7 @@
 						<td>Lunar Module landed on 19 November 1969. Second crewed landing on the Moon.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">33</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Apollo_13" target="_blank" title="External Link - Wikipedia - Apollo 13">Apollo 13</a></td>
 						<td>Saturn V</td>
@@ -573,7 +573,7 @@
 						<td>Soft landed on 20 September. First robotic probe to land on the Moon and return a sample of lunar soil to Earth.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">35</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Zond_8" target="_blank" title="External Link - Wikipedia - Zond 8">Zond 8</a></td>
 						<td>Proton-K/D</td>
@@ -595,7 +595,7 @@
 						<td>Soft landed on the Sea of Rains and deployed the Lunokhod 1 rover. First robotic rover to be used on the lunar surface.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">37</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Apollo_14" target="_blank" title="External Link - Wikipedia - Apollo 14">Apollo 14</a></td>
 						<td>Saturn V</td>
@@ -617,7 +617,7 @@
 						<td>Lunar Module landed on 30 July. Fourth crewed landing on the Moon and first to use a rover.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">39</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Luna_19" target="_blank" title="External Link - Wikipedia - Luna 19">Luna 19</a></td>
 						<td>Proton-K/D</td>
@@ -639,7 +639,7 @@
 						<td>soft landed on the Moon in the Apollonius highlands. Returned samples to Earth.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">41</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Apollo_16" target="_blank" title="External Link - Wikipedia - Apollo 16">Apollo 16</a></td>
 						<td>Saturn V</td>
@@ -661,7 +661,7 @@
 						<td>Lunar Module landed and used the Lunar Roving Vehicle. Sixth and last crewed landing on the Moon.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">43</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Luna_21" target="_blank" title="External Link - Wikipedia - Luna 21">Luna 21</a></td>
 						<td>Proton-K/D</td>
@@ -683,7 +683,7 @@
 						<td>Radio astronomy spacecraft operated in lunar orbit. Orbit to avoid interference from terrestrial radio sources.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">45</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Mariner_10" target="_blank" title="External Link - Wikipedia - Mariner 10">Mariner 10</a></td>
 						<td>Atlas-Centaur</td>
@@ -705,7 +705,7 @@
 						<td>Soft landed and deployed the Lunokhod 2 rover. Second robotic rover to be used on the lunar surface.</td>
 					</tr>
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">47</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Luna_24" target="_blank" title="External Link - Wikipedia - Luna 24">Luna 24</a></td>
 						<td>Proton-K/D</td>
@@ -727,7 +727,7 @@
 						<td>Designed for flyby, placed into luna orbit to extend mission. De-orbited and impacted on the moon on 10 April 1993.</td>
 					</tr>								
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">49</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Clementine_(spacecraft)" target="_blank" title="External Link - Wikipedia - Clementine">Clementine</a></td>
 						<td>Titan II(23)G</td>
@@ -749,7 +749,7 @@
 						<td>Low polar orbit investigation including mapping of surface composition and polar ice deposits.</td>
 					</tr>		
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">51</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/SMART-1" target="_blank" title="External Link - Wikipedia - SMART-1">SMART-1</a></td>
 						<td>Ariane 5G</td>
@@ -771,7 +771,7 @@
 						<td>Luna observation from orbit. Also called Kaguya. Impacted moon 10 June 2009.</td>
 					</tr>		
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">53</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Chang'e_1" target="_blank" title="External Link - Wikipedia - Chang'e 1">Chang'e 1</a></td>
 						<td>Long March 3A</td>
@@ -793,7 +793,7 @@
 						<td>Luna observation from orbit and deployed a luna impactor. Terminated in 2009, remains in luna orbit.</td>
 					</tr>		
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">55</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Lunar_Reconnaissance_Orbiter" target="_blank" title="External Link - Wikipedia - LRO">LRO</a></td>
 						<td>Atlas V 401</td>
@@ -815,7 +815,7 @@
 						<td>Observed impact of Centaur upper stage that launched it. Also impacted itself.</td>
 					</tr>		
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">57</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Chang'e_2" target="_blank" title="External Link - Wikipedia - Chang'e 2">Chang'e 2</a></td>
 						<td>Long March 3C</td>
@@ -837,7 +837,7 @@
 						<td>Orbital studies of the Moon's interaction with the Sun. Separate craft launched on the same rocket.</td>
 					</tr>		
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">59</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/GRAIL" target="_blank" title="External Link - Wikipedia - GRAIL A, B">GRAIL A, B</a></td>
 						<td>Delta II 7920H</td>
@@ -859,7 +859,7 @@
 						<td>Orbital study of lunar exosphere and dust in the Moon's vicinity. Intentionally crashed into the far side of the Moon.</td>
 					</tr>		
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">61</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Chang'e_3" target="_blank" title="External Link - Wikipedia - Chang'e 3">Chang'e 3</a></td>
 						<td>Long March 3B</td>
@@ -881,7 +881,7 @@
 						<td>Demonstration of re-entry capsule for Chang'e 5 sample-return mission at lunar return velocity.</td>
 					</tr>		
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">63</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Chang'e_4" target="_blank" title="External Link - Wikipedia - Chang'e 4">Chang'e 4</a></td>
 						<td>Long March 3B</td>
@@ -903,7 +903,7 @@
 						<td>Luna observation from orbit and deployed a luna lander. Failure of lander.</td>
 					</tr>		
 
-					<tr>
+					<tr class="trColor">
 						<td class="color">65</td>
 						<td><a class="elink" href="https://en.wikipedia.org/wiki/Chang'e_5" target="_blank" title="External Link - Wikipedia - Chang'e 5">Chang'e 5</a></td>
 						<td>Long March 5</td>
@@ -913,6 +913,73 @@
 						<td>Lander</td>
 						<td>Orbiter and lander with sample return to Earth.</td>
 					</tr>		
+
+					<tr>
+						<td class="color">66</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/CAPSTONE" target="_blank" title="External Link - Wikipedia - CAPSTONE">CAPSTONE</a></td>
+						<td>Electron</td>
+						<td>U.S.</td>
+						<td>2022</td>
+						<td>-</td>
+						<td>Orbiter</td>
+						<td>Test and verify the calculated orbital stability planned for the Lunar Gateway space station.</td>
+					</tr>		
+
+					<tr class="trColor">
+						<td class="color">67</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Orion_(spacecraft)" target="_blank" title="External Link - Wikipedia - Orion">Orion</a></td>
+						<td>SLS Block 1</td>
+						<td>U.S.</td>
+						<td>2022</td>
+						<td>2022</td>
+						<td>Orbiter</td>
+						<td>Artemis 1 was the first flight test of Orion and Space Launch System (SLS) rocket test the Orion spacecraft.</td>
+					</tr>
+
+					<tr>
+						<td class="color">68</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/EQUULEUS" target="_blank" title="External Link - Wikipedia - EQUULEUS">EQUULEUS</a></td>
+						<td>SLS Block 1</td>
+						<td>Japan</td>
+						<td>2022</td>
+						<td>2022</td>
+						<td>Flyby</td>
+						<td>demonstrate low-thrust trajectory control techniques, such as multiple lunar flybys, within the Earth-Moon region.</td>
+					</tr>		
+
+					<tr class="trColor">
+						<td class="color">69</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Danuri" target="_blank" title="External Link - Wikipedia - Danuri">Danuri</a></td>
+						<td>Falcon 9 Blk 5</td>
+						<td>S.Korea</td>
+						<td>2022</td>
+						<td>-</td>
+						<td>Orbiter</td>
+						<td>Survey lunar resources, water ice, uranium, helium-3, silicon, and aluminium, and produce a topographic map.</td>
+					</tr>
+
+					<tr>
+						<td class="color">70</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Chandrayaan-3" target="_blank" title="External Link - Wikipedia - Chandrayaan-3">Chandrayaan-3</a></td>
+						<td>LVM3-M4</td>
+						<td>India</td>
+						<td>2023</td>
+						<td>2023</td>
+						<td>Lander</td>
+						<td>Vikram lunar lander and Pragyan lunar rover similar to Chandrayaan-2, as well as an orbital propulsion module. </td>
+					</tr>		
+
+					<tr class="trColor">
+						<td class="color">71</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Smart_Lander_for_Investigating_Moon" target="_blank" title="External Link - Wikipedia - SLIM">SLIM</a></td>
+						<td>H-IIA 202</td>
+						<td>Japan</td>
+						<td>2023</td>
+						<td>-</td>
+						<td>Lander</td>
+						<td>Smart Lander for Investigating Moon. Precision lunar landing by recognizing lunar craters using facial recognition systems.</td>
+					</tr>
+
 				</table>
 			</div>
 
@@ -1273,8 +1340,59 @@
 						</div>
 						<p class="center color-small">Chang'e 5 / Long March 5</p>
 					</div>
-
 				</div>
+
+				<!-- Row 7 -->
+				
+				<div class="thumb-row">
+					<div>
+						<div class="thumb-background">
+							<h3>&nbsp;66&nbsp;</h3>
+							<a href="images-gallery/capstone-electron.jpg" data-lightbox="eos" title="CAPSTONE spacecraft drawing / Rocket Lab Electron launch (credit: NASA)"><img class="thumb" src="images-gallery/capstone-electron.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">CAPSTONE / Electron</p>
+					</div>
+
+					<div>
+						<div class="thumb-background">
+							<h3>&nbsp;67&nbsp;</h3>
+							<a href="images-gallery/orion-sls.jpg" data-lightbox="eos" title="Orion spacecraft drawing (with ESM and ICUS) / SLS rocket launch (credit: NASA)"><img class="thumb" src="images-gallery/orion-sls.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">Orion / SLS</p>
+					</div>
+
+					<div>
+						<div class="thumb-background">
+							<h3>&nbsp;68&nbsp;</h3>
+							<a href="images-gallery/equuleus-sls.jpg" data-lightbox="eos" title="EQUULEUS cubesat drawing / SLS rocket launch (credit: JAXA / NASA)"><img class="thumb" src="images-gallery/equuleus-sls.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">EQUULEUS / SLS</p>
+					</div>
+
+					<div>
+						<div class="thumb-background">
+							<h3>&nbsp;69&nbsp;</h3>
+							<a href="images-gallery/danuri-falcon-9.jpg" data-lightbox="eos" title="Danuri spacecraft drawing / Falcon 9 rocket launch (credit: KPLO / NASA)"><img class="thumb" src="images-gallery/danuri-falcon-9.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">Danuri / Falcon-9</p>
+					</div>
+
+					<div>
+						<div class="thumb-background">
+							<h3>&nbsp;70&nbsp;</h3>
+							<a href="images-gallery/chandrayaan-3-lvm3-m4.jpg" data-lightbox="eos" title="Chandrayaan-3 spacecraft in factory / LVM3-M4 rocket launch (credit: ISRO)"><img class="thumb" src="images-gallery/chandrayaan-3-lvm3-m4.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">Chandrayaan 3 / LVM3-M4</p>
+					</div>
+
+					<div>
+						<div class="thumb-background">
+							<h3>&nbsp;71&nbsp;</h3>
+							<a href="images-gallery/slim-h2a.jpg" data-lightbox="eos" title="SLIM spacecraft half scale model / HIIA rocket on pad (credit: JAXA)"><img class="thumb" src="images-gallery/slim-h2a.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">SLIM / HIIA</p>
+					</div>
+				</div>	
 			</div>
 		</section>
 
@@ -1315,7 +1433,7 @@
 		<!-- Footer Banner -->
 
 		<div class="footBanner flexRow-sa">
-			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2022-08</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
+			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2024-02</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
 		</div>
 
 		<!-- End -->
