--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 				
-			<img src="images/header-pic.png" alt="EOS Header Pic">
+			<img src="images/header-pic.png" alt="Header Pic">
 		</div>
 
 		<!-- Sub Header -->
@@ -234,7 +234,7 @@
 					<div>
 						<div class="thumb-background">
 							<h3>3d</h3>
-							<a href="images/243-ida.jpg" data-lightbox="eos" title="Asteroid 243 Ida from spacecraft Galileo (credit: NASA)"><img class="thumb" src="images/243-ida.jpg" alt="Ida" height="130px"></a>
+							<a href="images/243-Ida.jpg" data-lightbox="eos" title="Asteroid 243 Ida from spacecraft Galileo (credit: NASA)"><img class="thumb" src="images/243-ida.jpg" alt="Ida" height="130px"></a>
 						</div>
 						<p class="center color-small">Asteroid 243 Ida</p>
 					</div>
@@ -250,7 +250,7 @@
 					<div>
 						<div class="thumb-background">
 							<h3>3f</h3>
-							<a href="images/433-eros.jpg" data-lightbox="eos" title="Asteroid 433 Eros from spacecraft NEAR Shoemaker (credit: NASA)"><img class="thumb" src="images/433-eros.jpg" alt="Eros" height="130px"></a>
+							<a href="images/433-Eros.jpg" data-lightbox="eos" title="Asteroid 433 Eros from spacecraft NEAR Shoemaker (credit: NASA)"><img class="thumb" src="images/433-eros.jpg" alt="Eros" height="130px"></a>
 						</div>
 						<p class="center color-small">Asteroid 433 Eros</p>
 					</div>
@@ -482,7 +482,7 @@
 		<!-- Footer Banner -->
 
 		<div class="footBanner flexRow-sa">
-			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2022-08</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
+			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2024-02</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
 		</div>
 
 		<!-- End -->
