--- a/outer-planets.html
+++ b/outer-planets.html
@@ -434,14 +434,26 @@
 
 					<tr>
 						<td class="color">&nbsp;8</td>
-						<td><a class="elink" href="https://en.wikipedia.org/wiki/Jupiter_Icy_Moons_Explorer" target="_blank" title="External Link - Wikipedia - JUICE">JUICE</a></td>
-						<td>Ariane 5 ECA</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/ Jupiter_Icy_Moons_Explorer" target="_blank" title="External Link - Wikipedia - Juice">Juice</a></td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Ariane_5" target="_blank" title="External Link - Wikipedia - Ariane 5">Ariane 5</a> ECA+ (VA-260)</td>
 						<td>ESA</td>
 						<td>2023</td>
-						<td>-</td>
+						<td>2034</td>
 						<td>Jupiter's<br>
 						moons</td>
-						<td>Study three of Jupiter's Galilean moons; Ganymede, Callisto, and Europa. These may have significant bodies of liquid water beneath their icy surfaces which would make them potentially habitable environments.</td>
+						<td>Jupiter Icy Moons Explorer (Juice) to orbit and study three icy moons of Jupiter: Ganymede, Callisto, and Europa. They have significant bodies of liquid water beneath their frozen surfaces that may contain extraterrestrial life.</td>
+					</tr>
+
+					<tr class="trColor">
+						<td class="color">&nbsp;9</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Europa_Clipper" target="_blank" title="External Link - Wikipedia - Europa Clipper">Europa Clipper</a></td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/Falcon_Heavy" target="_blank" title="External Link - Wikipedia - Falcon Heavy">Falcon Heavy</a> Block 5</td>
+						<td>U.S.</td>
+						<td>2024</td>
+						<td>2030</td>
+						<td>Jupiter's<br>
+						moon Europa</td>
+						<td>To study Europa, a moon of Jupiter. While orbiting Jupiter, Europa Clipper will perform a series of flybys of Europa to study evidence of a subsurface ocean underneath Europa's ice crust. The orbiter will analyze the induced magnetic field around Europa, and attempt to detect plumes of water ejecta from a subsurface ocean as well as various other tests.</td>
 					</tr>
 
 				</table>
@@ -502,15 +514,27 @@
 						</div>
 						<p class="center color-small">Juno / Atlas V</p>
 					</div>
+				</div>
+
+				<!-- Row 2 -->
+
+				<div class="thumb-row">
+					<div>
+						<div class="thumb-background">
+							<h3 style="line-height: 1.7em;">&nbsp;8&nbsp;</h3>
+							<a href="images-gallery/juice-arian-5.jpg" data-lightbox="eos" title="Jupiter Icy Moons Explorer (Juice) drawing / Arian 5 launch (credit: ESA)"><img class="thumb" src="images-gallery/juice-arian-5.jpg" alt="." height="130px"></a>
+						</div>
+						<p class="center color-small">Juice / Arian 5</p>
+					</div>
 
 					<div>
 						<div class="thumb-background">
-							<h3>&nbsp;8&nbsp;</h3>
-							<a href="images-gallery/juice-ariane-5.jpg" data-lightbox="eos" title="JUICE spacecraft drawing / Ariane-5 rocket on pad (credit: ESA)"><img class="thumb" src="images-gallery/juice-ariane-5.jpg" alt="." height="130px"></a>
+							<h3 style="line-height: 1.7em;">&nbsp;9&nbsp;</h3>
+							<a href="images-gallery/europa-clipper-falcon-heavy.jpg" data-lightbox="eos" title="Europa Clipper model / Falcon Heavy launch (credit: NASA)"><img class="thumb" src="images-gallery/europa-clipper-falcon-heavy.jpg" alt="." height="130px"></a>
 						</div>
-						<p class="center color-small">Juice / Ariane 5</p>
+						<p class="center color-small">Europa Clipper / Falcon Heavy</p>
 					</div>
-				</div>
+				</div>	
 			</div>
 		</section>
 
@@ -555,7 +579,7 @@
 		<!-- Footer Banner -->
 
 		<div class="footBanner flexRow-sa">
-			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2024-02</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
+			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2025-06</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
 		</div>
 
 		<!-- End -->
