--- a/pluto.html
+++ b/pluto.html
@@ -209,7 +209,7 @@
 									</div>
 								</div>
 							</td>
-							<td class="tdHead" width="52%" rowspan="2">Notes
+							<td class="tdHead" width="51%" rowspan="2">Notes
 								<div class="tableNote-button">
 									<span class="tableNote-symbol">&nbsp;&#8505;&nbsp;</span>
 									<div class="tableNote shadow" style="left: 10rem;">
@@ -241,8 +241,9 @@
 						<td width="5%">2006</td>
 						<td width="4%">-</td>
 						<td>Pluto,<br>
-							Asteroid 132524 APL</td>
-						<td width="52%">Part of NASA's New Frontiers program. Its primary mission to perform a flyby study of the Pluto system in 2015, and a secondary mission to fly by and study one or more other Kuiper belt objects. It is the fifth space probe to achieve the escape velocity needed to leave the Solar System.</td>
+							Asteroid 132524 APL,<br>
+							486958 Arrokoth</td>
+						<td width="51%">Part of NASA's New Frontiers program. Its primary mission to perform a flyby study of the Pluto system in 2015, and a secondary mission to fly by and study one or more other Kuiper belt objects. It is the fifth space probe to achieve the escape velocity needed to leave the Solar System.</td>
 					</tr>
 				</table>
 			</div>
@@ -264,9 +265,9 @@
 					<div>
 						<div class="thumb-background">
 							<h3>&nbsp;1&nbsp;</h3>
-							<a href="images-gallery/new-horizons-atlas-5-apl.jpg" data-lightbox="eos" title="New Horizons spacecraft model / Atlas V (551) + Star 48B 3rd stage rocket launch / 132524 APL asteroid photo (credit: NASA)"><img class="thumb" src="images-gallery/new-horizons-atlas-5-apl.jpg" alt="." height="130px"></a>
+							<a href="images-gallery/new-horizons-atlas-5-apl-arrokoth.jpg" data-lightbox="eos" title="New Horizons spacecraft model / Atlas V (551) + Star 48B 3rd stage rocket launch / 132524 APL asteroid photo / Kuiper belt object Arrokoth composite image (credit: NASA)"><img class="thumb" src="images-gallery/new-horizons-atlas-5-apl-arrokoth.jpg" alt="." height="130px"></a>
 						</div>
-						<p class="center color-small">New Horizons / Atlas V / APL</p>
+						<p class="center color-small">New Horizons / Atlas V / APL / Arrokoth</p>
 					</div>
 				</div>
 			</div>
@@ -311,7 +312,7 @@
 		<!-- Footer Banner -->
 
 		<div class="footBanner flexRow-sa">
-			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2024-02</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
+			<a class="hlink" href="#" title="Top of page"><em>&nbsp;rdata&nbsp;<sub>space</sub></em>&nbsp;&nbsp;<small>2025-06</small>&nbsp;&nbsp;&#9650;&nbsp;</a>
 		</div>
 
 		<!-- End -->
