--- a/asteroid.html
+++ b/asteroid.html
@@ -437,9 +437,9 @@
 					<div>
 						<div class="thumb-background">
 							<h3>&nbsp;3&nbsp;</h3>
-							<a href="images-gallery/deep-space-1-delta-2-braille.jpg" data-lightbox="eos" title="Deep Space 1 spacecraft drawing / Delta II 7326 rocket launch / 9969 Braille asteroid photo (credit: NASA)"><img class="thumb" src="images-gallery/deep-space-1-delta-2-braille.jpg" alt="." height="130px"></a>
+							<a href="images-gallery/deep-space-1-delta-2-braille-borrelly.jpg" data-lightbox="eos" title="Deep Space 1 spacecraft drawing / Delta II 7326 rocket launch / 9969 Braille asteroid photo (credit: NASA)"><img class="thumb" src="images-gallery/deep-space-1-delta-2-braille-borrelly.jpg" alt="." height="130px"></a>
 						</div>
-						<p class="center color-small">Deep Space 1 / Delta II / Braille</p>
+						<p class="center color-small">Deep Space 1 / Delta II / Braille / Borrelly</p>
 					</div>
 
 					<div>
