--- a/asteroid.html
+++ b/asteroid.html
@@ -232,7 +232,8 @@
 						<td>U.S.</td>
 						<td>1998</td>
 						<td>2001</td>
-						<td><a class="elink" href="https://en.wikipedia.org/wiki/9969_Braille" target="_blank" title="External Link - Wikipedia - 9969 Braille">9969 Braille</a></td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/9969_Braille" target="_blank" title="External Link - Wikipedia - 9969 Braille">9969 Braille</a><br>
+						<a class="elink" href="https://en.wikipedia.org/wiki/19P/Borrelly" target="_blank" title="External Link - Wikipedia - 19P Borrelly">19P Borrelly</a></td>
 						<td>NASA technology demonstration spacecraft part of the New Millennium Program. Carried out a flyby of asteroid 9969 Braille and extended twice to include an encounter with comet 19P/Borrelly.</td>
 					</tr>
 
@@ -243,8 +244,9 @@
 						<td>U.S.</td>
 						<td>1999</td>
 						<td>2011</td>
-						<td><a class="elink" href="https://en.wikipedia.org/wiki/5535_Annefrank" target="_blank" title="External Link - Wikipedia - 5535 Annefrank">5535 Annefrank</a></td>
-						<td>Flew by and studied the asteroid 5535 Annefrank en route to its primary mission to collect dust samples from the coma of comet Wild 2.</td>
+						<td><a class="elink" href="https://en.wikipedia.org/wiki/5535_Annefrank" target="_blank" title="External Link - Wikipedia - 5535 Annefrank">5535 Annefrank</a><br>
+						<a class="elink" href="https://en.wikipedia.org/wiki/81P/Wild" target="_blank" title="External Link - Wikipedia - 81P Wild 2">81P Wild 2</a></td>
+						<td>Flew by and studied the asteroid 5535 Annefrank en route to its primary mission to collect dust samples from the coma of comet 81P Wild 2.</td>
 					</tr>
 
 					<tr>
@@ -437,7 +439,7 @@
 					<div>
 						<div class="thumb-background">
 							<h3>&nbsp;3&nbsp;</h3>
-							<a href="images-gallery/deep-space-1-delta-2-braille-borrelly.jpg" data-lightbox="eos" title="Deep Space 1 spacecraft drawing / Delta II 7326 rocket launch / 9969 Braille asteroid photo (credit: NASA)"><img class="thumb" src="images-gallery/deep-space-1-delta-2-braille-borrelly.jpg" alt="." height="130px"></a>
+							<a href="images-gallery/deep-space-1-delta-2-braille-borrelly.jpg" data-lightbox="eos" title="Deep Space 1 spacecraft drawing / Delta II 7326 rocket launch / 9969 Braille asteroid photo / Comet 19P Borrelly (credit: NASA)"><img class="thumb" src="images-gallery/deep-space-1-delta-2-braille-borrelly.jpg" alt="." height="130px"></a>
 						</div>
 						<p class="center color-small">Deep Space 1 / Delta II / Braille / Borrelly</p>
 					</div>
@@ -445,9 +447,9 @@
 					<div>
 						<div class="thumb-background">
 							<h3>&nbsp;4&nbsp;</h3>
-							<a href="images-gallery/stardust-delta-2-annefrank.jpg" data-lightbox="eos" title="Stardust spacecraft / Delta II 7426 rocket launch / 5535 Annefrank asteroid photo (credit: NASA)"><img class="thumb" src="images-gallery/stardust-delta-2-annefrank.jpg" alt="." height="130px"></a>
+							<a href="images-gallery/stardust-delta-2-annefrank-wild.jpg" data-lightbox="eos" title="Stardust spacecraft / Delta II 7426 rocket launch / 5535 Annefrank asteroid photo / Comet 81P Wild 2 photo (credit: NASA)"><img class="thumb" src="images-gallery/stardust-delta-2-annefrank-wild.jpg" alt="." height="130px"></a>
 						</div>
-						<p class="center color-small">Stardust / Delta II / Annefrank</p>
+						<p class="center color-small">Stardust / Delta II / Annefrank / Wild 2</p>
 					</div>
 
 					<div>
