--- a/outer-planets.html
+++ b/outer-planets.html
@@ -522,9 +522,9 @@
 					<div>
 						<div class="thumb-background">
 							<h3 style="line-height: 1.7em;">&nbsp;8&nbsp;</h3>
-							<a href="images-gallery/juice-arian-5.jpg" data-lightbox="eos" title="Jupiter Icy Moons Explorer (Juice) drawing / Arian 5 launch (credit: ESA)"><img class="thumb" src="images-gallery/juice-arian-5.jpg" alt="." height="130px"></a>
+							<a href="images-gallery/juice-ariane-5.jpg" data-lightbox="eos" title="Jupiter Icy Moons Explorer (Juice) drawing / Arian 5 launch (credit: ESA)"><img class="thumb" src="images-gallery/juice-ariane-5.jpg" alt="." height="130px"></a>
 						</div>
-						<p class="center color-small">Juice / Arian 5</p>
+						<p class="center color-small">Juice / Ariane 5</p>
 					</div>
 
 					<div>
